Fix: deleted successResponse struct updated swagger
