# models/http_delete_user_response.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// HTTPDeleteUserResponse http delete user response
+//
+// swagger:model http.DeleteUserResponse
+type HTTPDeleteUserResponse struct {
+
+	// message
+	Message string `json:"message,omitempty"`
+}
+
+// Validate validates this http delete user response
+func (m *HTTPDeleteUserResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this http delete user response based on context it is used
+func (m *HTTPDeleteUserResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *HTTPDeleteUserResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *HTTPDeleteUserResponse) UnmarshalBinary(b []byte) error {
+	var res HTTPDeleteUserResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
