# models/http_register_response.go
@@ -1,0 +1,62 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// HTTPRegisterResponse http register response
+//
+// swagger:model http.RegisterResponse
+type HTTPRegisterResponse struct {
+
+	// created at
+	CreatedAt string `json:"created_at,omitempty"`
+
+	// email
+	Email string `json:"email,omitempty"`
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// token
+	Token string `json:"token,omitempty"`
+}
+
+// Validate validates this http register response
+func (m *HTTPRegisterResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this http register response based on context it is used
+func (m *HTTPRegisterResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *HTTPRegisterResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *HTTPRegisterResponse) UnmarshalBinary(b []byte) error {
+	var res HTTPRegisterResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
