# models/http_success_response.go
@@ -1,58 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// HTTPSuccessResponse http success response
-//
-// swagger:model http.successResponse
-type HTTPSuccessResponse struct {
-
-	// data
-	Data any `json:"data,omitempty"`
-
-	// message
-	// Example: Success message
-	Message string `json:"message,omitempty"`
-
-	// success
-	// Example: true
-	Success bool `json:"success,omitempty"`
-}
-
-// Validate validates this http success response
-func (m *HTTPSuccessResponse) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this http success response based on context it is used
-func (m *HTTPSuccessResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *HTTPSuccessResponse) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *HTTPSuccessResponse) UnmarshalBinary(b []byte) error {
-	var res HTTPSuccessResponse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
