# models/http_update_user_response.go
@@ -1,0 +1,65 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// HTTPUpdateUserResponse http update user response
+//
+// swagger:model http.UpdateUserResponse
+type HTTPUpdateUserResponse struct {
+
+	// date of birth
+	DateOfBirth string `json:"date_of_birth,omitempty"`
+
+	// email
+	Email string `json:"email,omitempty"`
+
+	// id
+	ID string `json:"id,omitempty"`
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// role
+	Role string `json:"role,omitempty"`
+
+	// updated at
+	UpdatedAt string `json:"updated_at,omitempty"`
+}
+
+// Validate validates this http update user response
+func (m *HTTPUpdateUserResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this http update user response based on context it is used
+func (m *HTTPUpdateUserResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *HTTPUpdateUserResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *HTTPUpdateUserResponse) UnmarshalBinary(b []byte) error {
+	var res HTTPUpdateUserResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
